Size changes on multiple components, fixed horizontal slider issue on IE

--- a/eon-ui/src/less/eon/ui/eon-slider/eon-slider.less
+++ b/eon-ui/src/less/eon/ui/eon-slider/eon-slider.less
@@ -94,6 +94,8 @@
   // ******* HORIZONTAL slider *******
   &[orientation="horizontal"] .@{element}-slider {
     height: 10px;
+    width: 100%;
+    min-width: 150px;
   }
 
   &[orientation="horizontal"] .@{element}-shell {
